@@ -1022,6 +1022,7 @@ dnl Output Files
 dnl ------------
 
 AC_CONFIG_FILES([Makefile
+                 manual/Makefile
                  man/Makefile
 				 man/man1/Makefile
                  src/Makefile
